--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-sdk": "^2.888.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
