--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "aws-sdk": "^2.888.0",
     "bootstrap": "^5.1.0",
-    "bootstrap-icons": "^1.5.0",
+    "bootstrap-icons": "^1.7.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-typical": "^0.1.3",
+    "sass": "^1.45.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
