--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-app-rewired build",
+    "build-orig": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
