--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
     "react-typical": "^0.1.3",
     "sass": "^1.45.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-app-rewired build",
-    "build-orig": "react-scripts build",
+    "build": "react-scripts build",
+    "build-no-chunk": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "^4.0.3"
   }
 }
