--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "mturk",
+  "name": "thesis-mturk-console",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "aws-sdk": "^2.888.0",
-    "bootstrap": "^5.1.0",
-    "bootstrap-icons": "^1.9.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "prop-types": "^15.8.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^16.14.0",
+    "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
-    "sass": "^1.45.1",
-    "web-vitals": "^1.0.1"
+    "sass": "^1.56.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-no-chunk": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,10 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "react-scripts": "^4.0.3"
   },
   "homepage": "."
 }
